--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation 'androidx.navigation:navigation-compose:2.4.0-alpha10'
+    implementation "io.coil-kt:coil-compose:2.4.0"
 }
