--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-config-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.6.0'
-    
+
     implementation 'androidx.navigation:navigation-compose:2.4.0-alpha10'
     implementation "io.coil-kt:coil-compose:2.4.0"
 }
